--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -20,7 +20,8 @@
 <div class="container-fluid p-0">
     <header th:insert="blocks/header :: header"></header>
     <div class="container">
-        <form class="mt-3" th:action="@{/users/register}" method="post" enctype="multipart/form-data">
+        <form class="mt-3" th:action="@{/users/register}" method="post">
+            <p class="text-danger" th:text="${message}"></p>
             <div class="mb-3">
                 <label for="name" class="form-label"><b>Имя</b></label>
                 <input type="text" class="form-control" id="name" name="name" placeholder="Иван" required>
